--- a/public/index.html
+++ b/public/index.html
@@ -272,8 +272,7 @@
 		</section>
 	</div>
 
-	<!-- FOOTER -->
-	<footer class="footer__site">
+	<!-- FOOTER -->	<footer class="footer__site">
 		<ul class="footer__links__socialmedia">
 			<li><a href=""><i class="fa-brands fa-square-facebook"></i></a></li>
 			<li><a href=""><i class="fa-brands fa-facebook-messenger"></i></a></li>
@@ -297,8 +296,6 @@
 
 	</footer>
 
-	
-	
 
 
 
